--- a/.github/workflows/build-pdf-book.yml
+++ b/.github/workflows/build-pdf-book.yml
@@ -1,9 +1,9 @@
 name: Build PDF Book
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
