--- a/.github/workflows/build-pdf-book.yml
+++ b/.github/workflows/build-pdf-book.yml
@@ -39,10 +39,10 @@ jobs:
           curl -sSL https://github.com/rust-lang/mdBook/releases/download/v0.4.34/mdbook-v0.4.34-x86_64-unknown-linux-gnu.tar.gz | tar -xz --directory=$HOME/.local/bin
           echo "$HOME/.local/bin" >> $GITHUB_PATH
       
-      # Install a specific, known-working version of mdbook-pdf
+      # Install the latest version of mdbook-pdf
       - name: Install mdbook-pdf
         run: |
-          cargo install mdbook-pdf --version=0.1.13 --force
+          cargo install mdbook-pdf
       
       # Install system dependencies with caching
       - name: Install system dependencies
@@ -58,16 +58,38 @@ jobs:
           # Create minimal SUMMARY.md if it doesn't exist or is empty
           [ -s SUMMARY.md ] || echo "# Summary\n\n* [Introduction](README.md)" > SUMMARY.md
       
-      - name: Build PDF with debug
+      - name: Build PDF with fallbacks
         run: |
           export RUST_BACKTRACE=1
+          
+          echo "Attempting direct mdbook-pdf build..."
+          mdbook-pdf && echo "Direct build successful!" && exit 0
+          
+          echo "Direct build failed, trying alternative approach..."
+          
+          # First generate the book with mdbook
           mdbook build --dest-dir ./.book
+          
+          # Try building the PDF from the book directory
           cd ./.book
-          MDBOOK_OUTPUT_DIRECTORY=../. mdbook-pdf
+          echo "Building PDF from book directory..."
+          MDBOOK_OUTPUT_DIRECTORY=../. mdbook-pdf || (
+            # If that fails, try one more alternative approach
+            cd ..
+            echo "Attempting alternative approach with manual copy of SUMMARY.md..."
+            cp SUMMARY.md ./.book/
+            cd ./.book
+            MDBOOK_OUTPUT_DIRECTORY=../. mdbook-pdf
+          )
       
       - name: Organize PDF by Date
         run: |
-          python scripts/organize_pdf.py book.pdf || echo "Could not organize PDF, continuing workflow"
+          if [ -f book.pdf ]; then
+            echo "PDF file found, organizing..."
+            python scripts/organize_pdf.py book.pdf || echo "Warning: Could not organize PDF, continuing workflow"
+          else
+            echo "Warning: book.pdf not found, skipping organization step"
+          fi
           mkdir -p published_pdfs
           cp -r published_pdfs ./published_pdfs || true
       
