Restoring from old hard drive (1/5)

--- a/book.toml
+++ b/book.toml
@@ -12,7 +12,7 @@ margin-left = 1.5
 margin-right = 1.5
 margin-top = 1.5
 margin-bottom = 1.5
-cover-images = ["images/cover.png"]  # Optional: Add a cover image
+# cover-images = ["images/cover.png"]  # Optional: Add a cover image (uncomment when images/ exists)
 printable-index = true
 use-default-css = false  # Use our custom CSS instead
 additional-css = ["theme/pdf.css"]
